--- a/index.html
+++ b/index.html
@@ -42,22 +42,10 @@
 
   <p id="status"></p>
 
-  <!-- WebToNative library -->
   <script src="https://unpkg.com/webtonative@1.0.77/webtonative.min.js"></script>
 
   <script>
     const fallbackUrl = "https://thebetpoint.app/dl/063968";
-
-    // Wait until WTN.OneSignal is ready
-    function waitForOneSignal(callback) {
-      if (window.WTN?.OneSignal) {
-        console.log("✅ WTN.OneSignal ready");
-        callback(window.WTN.OneSignal);
-      } else {
-        console.log("⏳ Waiting for WTN.OneSignal...");
-        setTimeout(() => waitForOneSignal(callback), 400);
-      }
-    }
 
     function linkDevice() {
       const userId = document.getElementById("userIdInput").value.trim();
@@ -68,39 +56,29 @@
         return;
       }
 
-      waitForOneSignal((OneSignalBridge) => {
-        status.textContent = "🔄 Linking device...";
-        console.log("Setting external ID:", userId);
+      status.textContent = "🔄 Linking device...";
 
-        OneSignalBridge.setExternalUserId(userId)
-          .then(() => {
-            console.log("✅ External ID set:", userId);
+      // Directly set external ID without waiting for promise
+      if (window.WTN?.OneSignal?.setExternalUserId) {
+        window.WTN.OneSignal.setExternalUserId(userId);
+        console.log("✅ External ID set:", userId);
+      }
 
-            // Set tags
-            if (OneSignalBridge.setTags) {
-              OneSignalBridge.setTags({ linked: "true", user_id: userId });
-              console.log("✅ Tags set for user:", userId);
-            }
+      // Set tags if available
+      if (window.WTN?.OneSignal?.setTags) {
+        window.WTN.OneSignal.setTags({ linked: "true", user_id: userId });
+        console.log("✅ Tags set for user:", userId);
+      }
 
-            // Show success message
-            status.textContent = "✅ Device linked successfully!";
-
-            // Close or go back in WebToNative app, otherwise fallback
-            setTimeout(() => {
-              if (window.WTN?.Navigation?.goBack) {
-                console.log("🔙 Closing via WTN.Navigation.goBack()");
-                window.WTN.Navigation.goBack();
-              } else {
-                console.log("➡️ No native back available, using fallback URL");
-                window.location.href = fallbackUrl;
-              }
-            }, 800); // short delay to show the message
-          })
-          .catch((err) => {
-            console.error("❌ Failed to set external ID:", err);
-            status.textContent = "❌ Error linking device. Try again.";
-          });
-      });
+      // Show message briefly then close/back
+      status.textContent = "✅ Device linked!";
+      setTimeout(() => {
+        if (window.WTN?.Navigation?.goBack) {
+          window.WTN.Navigation.goBack();
+        } else {
+          window.location.href = fallbackUrl;
+        }
+      }, 500); // 0.5s delay
     }
   </script>
 </body>
