--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
       width: 240px;
       border: 1px solid #ccc;
       border-radius: 6px;
+      display: block;
+      margin: 8px auto;
     }
     button { 
       padding: 8px 18px; 
       font-size: 16px; 
-      margin-left: 8px;
+      margin-top: 10px;
       cursor: pointer;
       border: none;
       border-radius: 6px;
@@ -36,8 +38,9 @@
   </style>
 </head>
 <body>
-  <p>Enter your Glide User ID to link your device:</p>
-  <input type="text" id="userIdInput" placeholder="Enter your User ID">
+  <p>Enter your Glide Email and User ID to link your device:</p>
+  <input type="text" id="emailInput" placeholder="Paste your Email">
+  <input type="text" id="userIdInput" placeholder="Paste your User ID">
   <button onclick="linkDevice()">Link Device</button>
 
   <p id="status"></p>
@@ -47,38 +50,59 @@
   <script>
     const fallbackUrl = "https://thebetpoint.app/dl/063968";
 
-    function linkDevice() {
+    async function linkDevice() {
+      const email = document.getElementById("emailInput").value.trim();
       const userId = document.getElementById("userIdInput").value.trim();
       const status = document.getElementById("status");
 
-      if (!userId) {
-        alert("Please enter your User ID.");
+      if (!email || !userId) {
+        alert("Please enter both Email and User ID."); 
         return;
       }
 
       status.textContent = "🔄 Linking device...";
 
-      // Directly set external ID without waiting for promise
+      // 1️⃣ Set WTN OneSignal external ID & tags
       if (window.WTN?.OneSignal?.setExternalUserId) {
         window.WTN.OneSignal.setExternalUserId(userId);
         console.log("✅ External ID set:", userId);
       }
 
-      // Set tags if available
       if (window.WTN?.OneSignal?.setTags) {
-        window.WTN.OneSignal.setTags({ linked: "true", user_id: userId });
-        console.log("✅ Tags set for user:", userId);
+        window.WTN.OneSignal.setTags({ linked: "true", user_id: userId, email: email });
+        console.log("✅ Tags set:", { user_id: userId, email });
       }
 
-      // Show message briefly then close/back
-      status.textContent = "✅ Device linked!";
+      // 2️⃣ Update Postgres via your server webhook
+      try {
+        const response = await fetch("https://newuser-434y.onrender.com/webhook", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ row_id: userId, email: email })
+        });
+
+        const data = await response.json();
+        console.log("Postgres update result:", data);
+
+        if (data.success) {
+          status.textContent = "✅ Device linked and database updated!";
+        } else {
+          status.textContent = "⚠️ Device linked, but DB update failed.";
+        }
+
+      } catch (err) {
+        console.error("DB update error:", err);
+        status.textContent = "⚠️ Device linked, DB update error.";
+      }
+
+      // 3️⃣ Go back / fallback
       setTimeout(() => {
         if (window.WTN?.Navigation?.goBack) {
           window.WTN.Navigation.goBack();
         } else {
           window.location.href = fallbackUrl;
         }
-      }, 500); // 0.5s delay
+      }, 500);
     }
   </script>
 </body>
