--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
 
   <p id="status"></p>
 
+  <!-- WebToNative SDK -->
   <script src="https://unpkg.com/webtonative@1.0.77/webtonative.min.js"></script>
 
   <script>
-    const fallbackUrl = "https://thebetpoint.app/dl/063968";
+    const fallbackUrl = "https://thebetpoint.app/dl/063968"; // fallback if goBack unavailable
 
     async function linkDevice() {
       const email = document.getElementById("emailInput").value.trim();
@@ -62,19 +63,19 @@
 
       status.textContent = "🔄 Linking device...";
 
-      // 1️⃣ Set WTN OneSignal external ID & tags
-      if (window.WTN?.OneSignal?.setExternalUserId) {
-        window.WTN.OneSignal.setExternalUserId(userId);
-        console.log("✅ External ID set:", userId);
-      }
-
-      if (window.WTN?.OneSignal?.setTags) {
-        window.WTN.OneSignal.setTags({ linked: "true", user_id: userId, email: email });
-        console.log("✅ Tags set:", { user_id: userId, email });
-      }
-
-      // 2️⃣ Update Postgres via your server webhook
       try {
+        // 1️⃣ Set WTN OneSignal external ID & tags
+        if (window.WTN?.OneSignal?.setExternalUserId) {
+          window.WTN.OneSignal.setExternalUserId(userId);
+          console.log("✅ External ID set:", userId);
+        }
+
+        if (window.WTN?.OneSignal?.setTags) {
+          window.WTN.OneSignal.setTags({ linked: "true", user_id: userId, email: email });
+          console.log("✅ Tags set:", { user_id: userId, email });
+        }
+
+        // 2️⃣ Call your Render webhook
         const response = await fetch("https://newuser-434y.onrender.com/webhook", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
@@ -82,29 +83,30 @@
         });
 
         const data = await response.json();
-        console.log("Postgres update result:", data);
 
         if (data.success) {
           status.textContent = "✅ Device linked and database updated!";
         } else {
+          console.warn("⚠️ Webhook returned an error:", data.error);
           status.textContent = "⚠️ Device linked, but DB update failed.";
         }
 
       } catch (err) {
-        console.error("DB update error:", err);
+        console.error("⚠️ Linking failed:", err);
         status.textContent = "⚠️ Device linked, DB update error.";
       }
 
-      // 3️⃣ Go back / fallback
+      // 3️⃣ Navigate back or fallback URL
       setTimeout(() => {
         if (window.WTN?.Navigation?.goBack) {
           window.WTN.Navigation.goBack();
         } else {
           window.location.href = fallbackUrl;
         }
-      }, 500);
+      }, 800); // slight delay for user to see the status
     }
   </script>
 </body>
 </html>
+
 
