--- a/index.html
+++ b/index.html
@@ -5,36 +5,10 @@
   <title>Link Device</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { 
-      font-family: sans-serif; 
-      text-align: center; 
-      margin-top: 60px;
-      color: #222;
-    }
-    input { 
-      padding: 8px; 
-      font-size: 16px; 
-      width: 240px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      display: block;
-      margin: 8px auto;
-    }
-    button { 
-      padding: 8px 18px; 
-      font-size: 16px; 
-      margin-top: 10px;
-      cursor: pointer;
-      border: none;
-      border-radius: 6px;
-      background: #007bff;
-      color: white;
-    }
-    #status {
-      margin-top: 20px;
-      font-size: 14px;
-      color: green;
-    }
+    body { font-family: sans-serif; text-align: center; margin-top: 60px; }
+    input { padding: 8px; font-size: 16px; width: 240px; margin: 8px auto; display: block; border-radius:6px; border:1px solid #ccc;}
+    button { padding:8px 18px; font-size:16px; cursor:pointer; border:none; border-radius:6px; background:#007bff; color:white;}
+    #status { margin-top:20px; font-size:14px; color:green;}
   </style>
 </head>
 <body>
@@ -42,14 +16,11 @@
   <input type="text" id="emailInput" placeholder="Paste your Email">
   <input type="text" id="userIdInput" placeholder="Paste your User ID">
   <button onclick="linkDevice()">Link Device</button>
-
   <p id="status"></p>
 
-  <!-- WebToNative SDK -->
   <script src="https://unpkg.com/webtonative@1.0.77/webtonative.min.js"></script>
-
   <script>
-    const fallbackUrl = "https://thebetpoint.app/dl/063968"; // fallback if goBack unavailable
+    const fallbackUrl = "https://thebetpoint.app/dl/063968";
 
     async function linkDevice() {
       const email = document.getElementById("emailInput").value.trim();
@@ -57,56 +28,48 @@
       const status = document.getElementById("status");
 
       if (!email || !userId) {
-        alert("Please enter both Email and User ID."); 
+        alert("Please enter both Email and User ID.");
         return;
       }
 
       status.textContent = "🔄 Linking device...";
 
+      // 1️⃣ WTN OneSignal
+      if (window.WTN?.OneSignal?.setExternalUserId) {
+        window.WTN.OneSignal.setExternalUserId(userId);
+      }
+      if (window.WTN?.OneSignal?.setTags) {
+        window.WTN.OneSignal.setTags({ linked: "true", user_id: userId, email: email });
+      }
+
+      // 2️⃣ Call webhook
       try {
-        // 1️⃣ Set WTN OneSignal external ID & tags
-        if (window.WTN?.OneSignal?.setExternalUserId) {
-          window.WTN.OneSignal.setExternalUserId(userId);
-          console.log("✅ External ID set:", userId);
-        }
-
-        if (window.WTN?.OneSignal?.setTags) {
-          window.WTN.OneSignal.setTags({ linked: "true", user_id: userId, email: email });
-          console.log("✅ Tags set:", { user_id: userId, email });
-        }
-
-        // 2️⃣ Call your Render webhook
         const response = await fetch("https://newuser-434y.onrender.com/webhook", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ row_id: userId, email: email })
+          body: JSON.stringify({ row_id: userId, email })
         });
-
         const data = await response.json();
-
         if (data.success) {
           status.textContent = "✅ Device linked and database updated!";
         } else {
-          console.warn("⚠️ Webhook returned an error:", data.error);
           status.textContent = "⚠️ Device linked, but DB update failed.";
         }
-
       } catch (err) {
-        console.error("⚠️ Linking failed:", err);
+        console.error("DB update error:", err);
         status.textContent = "⚠️ Device linked, DB update error.";
       }
 
-      // 3️⃣ Navigate back or fallback URL
+      // 3️⃣ Go back / fallback
       setTimeout(() => {
         if (window.WTN?.Navigation?.goBack) {
           window.WTN.Navigation.goBack();
         } else {
           window.location.href = fallbackUrl;
         }
-      }, 800); // slight delay for user to see the status
+      }, 500);
     }
   </script>
 </body>
 </html>
-
 
