--- a/index.html
+++ b/index.html
@@ -34,22 +34,20 @@
 
       status.textContent = "🔄 Linking device...";
 
-      // 1️⃣ WTN OneSignal
+      // 1️⃣ Set OneSignal external ID
       if (window.WTN?.OneSignal?.setExternalUserId) {
         window.WTN.OneSignal.setExternalUserId(userId);
       }
-      if (window.WTN?.OneSignal?.setTags) {
-        window.WTN.OneSignal.setTags({ linked: "true", user_id: userId, email: email });
-      }
 
-      // 2️⃣ Call webhook
+      // 2️⃣ Send email and userId to webhook
       try {
         const response = await fetch("https://newuser-434y.onrender.com/webhook", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ row_id: userId, email })
+          body: JSON.stringify({ row_id: userId, email: email })
         });
         const data = await response.json();
+
         if (data.success) {
           status.textContent = "✅ Device linked and database updated!";
         } else {
@@ -60,7 +58,7 @@
         status.textContent = "⚠️ Device linked, DB update error.";
       }
 
-      // 3️⃣ Go back / fallback
+      // 3️⃣ Fallback navigation
       setTimeout(() => {
         if (window.WTN?.Navigation?.goBack) {
           window.WTN.Navigation.goBack();
