--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     body { font-family: sans-serif; text-align: center; margin-top: 60px; }
     input { padding: 8px; font-size: 16px; width: 240px; margin: 8px auto; display: block; border-radius:6px; border:1px solid #ccc;}
     button { padding:8px 18px; font-size:16px; cursor:pointer; border:none; border-radius:6px; background:#007bff; color:white;}
-    #status { margin-top:20px; font-size:14px; color:green;}
+    button:disabled { background:#999; cursor:not-allowed; }
+    #status { margin-top:20px; font-size:14px; color:green; }
   </style>
 </head>
 <body>
   <p>Enter your Glide Email and User ID to link your device:</p>
   <input type="text" id="emailInput" placeholder="Paste your Email">
   <input type="text" id="userIdInput" placeholder="Paste your User ID">
-  <button onclick="linkDevice()">Link Device</button>
+  <button id="linkBtn" onclick="linkDevice()">Link Device</button>
   <p id="status"></p>
 
   <script src="https://unpkg.com/webtonative@1.0.77/webtonative.min.js"></script>
@@ -26,12 +27,15 @@
       const email = document.getElementById("emailInput").value.trim();
       const userId = document.getElementById("userIdInput").value.trim();
       const status = document.getElementById("status");
+      const linkBtn = document.getElementById("linkBtn");
 
       if (!email || !userId) {
         alert("Please enter both Email and User ID.");
         return;
       }
 
+      // Disable button while linking
+      linkBtn.disabled = true;
       status.textContent = "🔄 Linking device...";
 
       // 1️⃣ Set OneSignal external ID
@@ -39,26 +43,41 @@
         window.WTN.OneSignal.setExternalUserId(userId);
       }
 
-      // 2️⃣ Send email and userId to webhook
+      // 2️⃣ Send email and userId to webhook with robust logging
       try {
         const response = await fetch("https://newuser-434y.onrender.com/webhook", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ row_id: userId, email: email })
         });
-        const data = await response.json();
+
+        // Get raw response text for debugging
+        const rawText = await response.text();
+        console.log("Webhook raw response:", rawText);
+
+        let data;
+        try {
+          data = JSON.parse(rawText);
+        } catch (err) {
+          console.error("JSON parse error:", err);
+          data = { success: false, error: "Invalid JSON from webhook" };
+        }
 
         if (data.success) {
           status.textContent = "✅ Device linked and database updated!";
         } else {
-          status.textContent = "⚠️ Device linked, but DB update failed.";
+          status.textContent = `⚠️ Device linked, DB update failed. (${data.error || "unknown error"})`;
         }
+
       } catch (err) {
-        console.error("DB update error:", err);
-        status.textContent = "⚠️ Device linked, DB update error.";
+        console.error("Fetch error:", err);
+        status.textContent = "⚠️ Device linked, fetch error.";
       }
 
-      // 3️⃣ Fallback navigation
+      // 3️⃣ Re-enable button after attempt
+      linkBtn.disabled = false;
+
+      // 4️⃣ Fallback navigation
       setTimeout(() => {
         if (window.WTN?.Navigation?.goBack) {
           window.WTN.Navigation.goBack();
