--- a/index.html
+++ b/index.html
@@ -6,22 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { font-family: sans-serif; text-align: center; margin-top: 60px; }
+    label { display: block; font-weight: bold; margin-top: 16px; margin-bottom: 4px; font-size: 14px; }
     input { padding: 8px; font-size: 16px; width: 240px; margin: 8px auto; display: block; border-radius:6px; border:1px solid #ccc;}
-    button { padding:8px 18px; font-size:16px; cursor:pointer; border:none; border-radius:6px; background:#007bff; color:white;}
+    button { padding:8px 18px; font-size:16px; cursor:pointer; border:none; border-radius:6px; background:#007bff; color:white; margin-top:16px;}
     button:disabled { background:#999; cursor:not-allowed; }
     #status { margin-top:20px; font-size:14px; color:green; }
   </style>
 </head>
 <body>
   <p>Enter your Glide Email and User ID to link your device:</p>
+
+  <label for="emailInput">Email</label>
   <input type="text" id="emailInput" placeholder="Paste your Email">
+
+  <label for="userIdInput">User ID</label>
   <input type="text" id="userIdInput" placeholder="Paste your User ID">
+
   <button id="linkBtn" onclick="linkDevice()">Link Device</button>
   <p id="status"></p>
 
   <script src="https://unpkg.com/webtonative@1.0.77/webtonative.min.js"></script>
   <script>
-    const fallbackUrl = "https://thebetpoint.app/dl/063968";
+    const fallbackUrl = "https://thebetpoint.app/dl/107a5b";
 
     async function linkDevice() {
       const email = document.getElementById("emailInput").value.trim();
@@ -43,7 +49,8 @@
         window.WTN.OneSignal.setExternalUserId(userId);
       }
 
-      // 2️⃣ Send email and userId to webhook with robust logging
+      // 2️⃣ Send email and userId to webhook
+      let isNewUser = false;
       try {
         const response = await fetch("https://newuser-434y.onrender.com/webhook", {
           method: "POST",
@@ -51,7 +58,6 @@
           body: JSON.stringify({ row_id: userId, email: email })
         });
 
-        // Get raw response text for debugging
         const rawText = await response.text();
         console.log("Webhook raw response:", rawText);
 
@@ -65,6 +71,8 @@
 
         if (data.success) {
           status.textContent = "✅ Device linked and database updated!";
+          // Determine if new user (you can adapt this based on your webhook response)
+          if (data.isNewUser) isNewUser = true;
         } else {
           status.textContent = `⚠️ Device linked, DB update failed. (${data.error || "unknown error"})`;
         }
@@ -74,15 +82,19 @@
         status.textContent = "⚠️ Device linked, fetch error.";
       }
 
-      // 3️⃣ Re-enable button after attempt
+      // 3️⃣ Re-enable button
       linkBtn.disabled = false;
 
-      // 4️⃣ Fallback navigation
+      // 4️⃣ Navigation based on new user or fallback
       setTimeout(() => {
+        const redirectUrl = isNewUser 
+          ? "https://thebetpoint.app/dl/efe9f4" 
+          : fallbackUrl;
+
         if (window.WTN?.Navigation?.goBack) {
           window.WTN.Navigation.goBack();
         } else {
-          window.location.href = fallbackUrl;
+          window.location.href = redirectUrl;
         }
       }, 500);
     }
